# VossII

./: .dir-locals.el  .envrc  .gdbinit  .gitignore  .rgignore  dbg_ste.fl  notes.org
.github/workflows/: build.yml
src/: .envrc  Makefile  meson.build
src/fl-hs-plugins/src/: hsbracket.c
src/include/: alloc.h  buf.h  generation_hash.h  hash.h  morestr.h  readrc.h  rec.h  strmgr.h  timer.h  types.h  uniq_buf.h
src/lib/: Makefile  alloc.c  buf.c  generation_hash.c  hash.c  meson.build  morestr.c  readrc.c  rec.c  strmgr.c  timer.c  uniq_buf.c
src/subprojects/: whereami.wrap
src/subprojects/minisat/: Makefile
src/subprojects/packagefiles/whereami/: meson.build
